--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'java' // Needed for assemble and build
+    id 'maven'
     id 'com.enonic.xp.app' version '1.0.17'
     id 'com.moowork.node' version '1.2.0'
 }
 
 
 repositories {
+    mavenLocal()
     jcenter()
     xp.enonicRepo()
 }
@@ -13,7 +15,7 @@ repositories {
 
 app {
     name = project.appName
-    displayName = 'Starter Admintool. Change me in build.gradle'
+    displayName = 'Cron admin'
     vendorName = 'Enonic AS'
     vendorUrl = 'http://enonic.com'
     systemVersion = "${xpVersion}"
@@ -24,25 +26,8 @@ dependencies {
     compile "com.enonic.xp:core-api:${xpVersion}"
     compile "com.enonic.xp:portal-api:${xpVersion}"
 
-    //include "com.enonic.xp:lib-admin:${xpVersion}"
-    //include "com.enonic.xp:lib-auth:${xpVersion}"
-    //include "com.enonic.xp:lib-content:${xpVersion}"
-    //include "com.enonic.xp:lib-context:${xpVersion}"
-    //include "com.enonic.xp:lib-i18n:${xpVersion}"
-    //include "com.enonic.xp:lib-io:${xpVersion}"
-    //include "com.enonic.xp:lib-mail:${xpVersion}"
-    //include "com.enonic.xp:lib-mustache:${xpVersion}"
-    //include "com.enonic.xp:lib-portal:${xpVersion}"
-    //include "com.enonic.xp:lib-repo:${xpVersion}"
-    //include "com.enonic.xp:lib-task:${xpVersion}"
-    //include "com.enonic.xp:lib-thymeleaf:${xpVersion}"
-    //include "com.enonic.xp:lib-websocket:${xpVersion}"
-    //include "com.enonic.xp:lib-xslt:${xpVersion}"
+    include 'com.enonic.lib:cron:1.0.0-SNAPSHOT'
 
-    //include "com.enonic.lib:lib-admin-ui:${libAdminUiVersion}"
-    //include 'com.enonic.lib:lib-cache:1.1.0'
-    //include 'com.enonic.lib:lib-http-client:1.0.1'
-    //include 'com.enonic.lib:menu:1.3.3'
     include 'com.enonic.lib:util:1.3.0'
 }
 
